Use index, not instanceName in create_downloads

--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -825,15 +825,15 @@ reload: True
 event: create_downloads
 code: |
   download_response = {}
-  for user in users:
-    download_response[user.instanceName] = user.document_bundle.as_pdf()
+  for idx, user in enumerate(users):
+    download_response[idx] = user.document_bundle.as_pdf()
   background_response_action('save_downloads', download_response=download_response)
 ---
 event: save_downloads
 code: |
   ans = action_argument('download_response')
-  for user in users:
-    user.cached_pdf = ans[user.instanceName]
+  for idx, user in enumerate(users)::
+    user.cached_pdf = ans[idx]
   background_response()
 ---
 id: download_completed_ea_application
