--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -55,7 +55,7 @@ fields:
       ${ showifdef("users[0].applied_other_information") if i > 0 else '' }
     show if: users[i].applied_for_other_immigration_benefit
     datatype: area
-  - "What is the proof of parole? Ex: i-94, parole letter, Interim Notice of Parole": users[i].proof_of_parole
+  - "What is the proof of parole? Ex: I-94, parole letter, Interim Notice of Parole": users[i].proof_of_parole
     datatype: area
     rows: 2
     default: |
@@ -110,7 +110,7 @@ subquestion: |
     <li>Receipt date: ${ user.applied_receipt_date }</li>
     <li>Any other important information to note: ${ user.applied_other_information }</li>
     % endif
-    <li>What is the proof of parole? Ex: i-94, parole letter, Interim Notice of Parole: ${ user.proof_of_parole }</li>
+    <li>What is the proof of parole? Ex: I-94, parole letter, Interim Notice of Parole: ${ user.proof_of_parole }</li>
     % if not user.proof_of_parole_valid_for_90_days:
     <li style="background-color: #ffff00; color: #000;"><i class="fas fa-exclamation-triangle"></i>${ user }'s proof of parole is not valid for at least 90 days</li>
     % else:
@@ -174,7 +174,7 @@ fields:
 id: tps_screening_questions
 continue button field: users[i].tps_screening_questions
 question: |
-  TPS eligibility screener for ${ bold(users[i]) } (DOB: ${ users[i].birthdate.format("mm/DD/yyyy") })
+  TPS eligibility screener for ${ bold(users[i]) } (DOB: ${ users[i].birthdate.format("MM/dd/yyyy") })
 subquestion: |
   % if i == 0:
   <div class="p-3 mb-2 bg-info text-dark border border-info rounded-3" role="alert">
@@ -363,6 +363,19 @@ fields:
     show if: users[i].children_entered_separately
     default: |
       ${ showifdef("users[0].children_entered_separately_explanation") if i > 0 else '' }
+  - Did you travel through Central America before entering the US?: users[i].traveled_through_central_america
+    datatype: yesnoradio
+    default: |
+      ${ showifdef("users[0].traveled_through_central_america") if i > 0 else '' }
+  - Did you travel through other countries?: users[i].traveled_through_other_countries
+    datatype: yesnoradio
+    default: |
+      ${ showifdef("users[0].traveled_through_other_countries") if i > 0 else '' }
+  - note: |
+      For now, this interview will only create an addendum about travel through Central America.
+      You may want to hand-edit the list of countries traveled through
+      and legal status in each country in the addendum or on form 821.
+    show if: users[i].traveled_through_other_countries
   - Have you had legal status in any other country besides Venezuela?: users[i].had_legal_status_outside_venezuela
     datatype: yesnoradio
     default: |
