--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -3319,13 +3319,13 @@ attachment:
     - "Page Number_3": ${ Page_Number_3 }
     - "Part Number_3": ${ Part_Number_3 }
     - "Item Number_3": ${ Item_Number_3 }
-    - "sign and date each sheet": ${ sign_and_date_each_sheet }
-    - "First Name_7": ${ First_Name_7 }
-    - "Middle Name_5": ${ Middle_Name_5 }
+    - "sign and date each sheet": ${ users[i].name.last }
+    - "First Name_7": ${ users[i].name.first }
+    - "Middle Name_5": ${ users[i.name.first] }
     - "Page Number_4": ${ Page_Number_4 }
     - "Part Number_4": ${ Part_Number_4 }
     - "Item Number_4": ${ Item_Number_4 }
-    - "A_2": ${ A_2 }
+    - "A_2": ${ users[i].a_number }
     - "Page Number": ${ Page_Number }
     - "Part Number": ${ Part_Number }
     - "Item Number": ${ Item_Number }
